--- a/Assets/Scripts/Plugins/LibraryPlugins/Steam/SteamLibraryPlugin.asmdef
+++ b/Assets/Scripts/Plugins/LibraryPlugins/Steam/SteamLibraryPlugin.asmdef
@@ -8,8 +8,12 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll",
+        "QRCoder.Unity.dll",
+        "QRCoder.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
