--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LiteDB" version="5.0.21" manuallyInstalled="true" />
+  <package id="QRCoder" version="1.3.4" />
+  <package id="QRCoder.Unity" version="1.0.3" manuallyInstalled="true" />
+  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" />
 </packages>
